--- a/blog/package.json
+++ b/blog/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/client": "^1.149.16",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "next": "9.4.4",
