--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "next": "9.4.4",
     "popper.js": "^1.16.0",
+    "pretty-date-js": "^1.1.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
