--- a/blog/package.json
+++ b/blog/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^1.149.16",
+    "@sanity/image-url": "^0.140.19",
     "bootstrap": "^4.5.0",
+    "highlight.js": "^10.1.1",
     "jquery": "^3.5.1",
     "next": "9.4.4",
     "popper.js": "^1.16.0",
