--- a/blog/package.json
+++ b/blog/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.9"
+    "sass": "^1.26.9",
+    "swr": "^0.2.3"
   }
 }
